modified:   dsygonline/WebRoot/page/shop_help.jsp 	modified:   dsygonline/src/messageResource_en_US.properties 	modified:   dsygonline/src/messageResource_zh_CN.properties

--- a/dsygonline/src/messageResource_en_US.properties
+++ b/dsygonline/src/messageResource_en_US.properties
@@ -74,7 +74,7 @@ rmb5000000=5,000,000 RMB
 funders=Funders
 invested=Shanghai DSYG Trade Co., Ltd. 100% invested
 szdsyg=Shenzhen DSYG Enterprise Development Co., Ltd
-szaddress=No 8 Chen Tian Building NO 2 Baomin Road Xixiang, Shenzhen City, Guangdong Province
+szaddress=No 2 BackBuilding First ground, ShengBao Jiaxin industrial estate, NO. 8 Huamei Road SongGang Lane, Baoan distinct, Shenzhen City, Guangdong Province
 registeredtime3=July 3rd, 2007
 rmb1500000=1,5000,000 RMB
 news=News
