--- a/dsygonline/src/messageResource_zh_CN.properties
+++ b/dsygonline/src/messageResource_zh_CN.properties
@@ -74,7 +74,7 @@ rmb5000000=\u4EBA\u6C11\u5E01500\u4E07\u5143\u6574
 funders=\u51FA\u8D44\u65B9
 invested=\u4E0A\u6D77\u6771\u5347\u76C8\u6E2F\u8D38\u6613\u6709\u9650\u516C\u53F8100%\u51FA\u8D44
 szdsyg=\u6DF1\u5733\u6771\u5347\u76C8\u6E2F\u4F01\u4E1A\u53D1\u5C55\u6709\u9650\u516C\u53F8
-szaddress=\u5E7F\u4E1C\u7701\u6DF1\u5733\u5E02\u897F\u4E61\u9547\u5B9D\u6C11\u4E8C\u8DEF\u81E3\u7530\u7EFC\u5408\u697C8\u53F7
+szaddress=\u6df1\u5733\u5e02\u5b9d\u5b89\u533a\u677e\u5c97\u8857\u9053\u534e\u7f8e\u8def\u0038\u53f7\u58f0\u5b9d\u4f73\u4fe1\u5de5\u4e1a\u533a\u0020\u540e\u4e8c\u680b\u5e95\u697c
 registeredtime3=2007\u5E747\u67083\u65E5
 rmb1500000=\u4EBA\u6C11\u5E01150\u4E07\u5143\u6574
 news=\u65B0\u95FB
